---------------------------------------------------------------------------------------------------
Version: 1.7.0
  Changes:
    - Added co-op teams
---------------------------------------------------------------------------------------------------
Version: 1.6.9
  Changes:
    - Updated drain equipment to drain shields too
---------------------------------------------------------------------------------------------------
Version: 1.6.8
  Changes:
    - Added 'not compatible' with Space Exploration
    - Added check for event.research for Blueprint Sandbox
    - Removed 'disable auto launch' from silo
    - Added "launched from" on rocket launch message
    - Bug fixed: Launch from non-Pre-Placed Silo causes error
    - Bug not fixed: Chengdo may not have enough space to spawn at
---------------------------------------------------------------------------------------------------
Version: 1.6.7
  Changes:
    - Re-removed debug setting.
---------------------------------------------------------------------------------------------------
Version: 1.6.6
  Changes:
    - Fixed peaceful mode bug 
---------------------------------------------------------------------------------------------------
Version: 1.6.5
  Changes:
    - Fixed terrain gen bug (trees & cliffs)
---------------------------------------------------------------------------------------------------
Version: 1.6.4
  Changes:
    - Turned off debug settings
---------------------------------------------------------------------------------------------------
Version: 1.6.3
  Changes:
    - Mod settings are saved in an internal table at init to prevent future corruption.
    - "All Rocket Silo" now allows 1 rocket to be launched for each silo launched from.
      - example: 1st Silo, 1 rocket.  2nd Silo, 2 rockets from each silo (4 total), 3rd Silo -> 3 each (9 total).
      - This addresses the issue of Space Science being too slow in late game.